--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,88 +1,56 @@
-<h1>List of all users</h1>
 
-<div class="container" style="margin-top: 70px;">
-    <table class="table table-hover">
-      <thead>
-        <tr>
-        
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>Username</th>
-          <th>E mail</th>
-          <th>Type</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let user of users">
-  
-          <td> {{ user.firstName }}</td>
-          <td> {{ user.lastName }}</td>
-          <td> {{ user.username }}</td>
-          <td> {{ user.email }}</td>
-          <td> {{ user.userType }}</td>
-         
+<mat-form-field>
+  <input type="text" matInput [(ngModel)]= "search">
+  <button matSuffix mat-button (click)="searchByUsername()">ok</button>
+  </mat-form-field>
 
-          <td>
-            
-            <button class="btn btn-primary" (click)="selectUser(user)"> Show details</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+<div class="container mat-elevation-z8">
+
+<mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
+
+  <ng-container matColumnDef="firstName">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>First name</mat-header-cell>
+    <mat-cell *matCellDef="let row">{{ row.firstName }}</mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="lastName">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Last name</mat-header-cell>
+    <mat-cell *matCellDef="let row">{{ row.lastName }}</mat-cell>
+  </ng-container>
+
+
+  <ng-container matColumnDef="username">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Username</mat-header-cell>
+    <mat-cell *matCellDef="let row">{{ row.username }}</mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="email">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Email</mat-header-cell>
+    <mat-cell *matCellDef="let row">{{ row.email }}</mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="userType">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>User type</mat-header-cell>
+    <mat-cell *matCellDef="let row">{{ row.userType }}</mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <mat-header-cell *matHeaderCellDef>
+      <button mat-icon-button color="primary">
+<button > add </button>
+      </button>
+    </mat-header-cell>
+    <mat-cell *matCellDef="let row; let i=index">
+      <button mat-icon-button color="primary">
+        <button area-label="Edit" > edit </button>
+              </button>
+<button>
+        <button area-label="Delete"> delete </button>
+            </button>
+    </mat-cell>
+  </ng-container>
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"></mat-row>
+  </mat-table>
+
 </div>
-
-<div class="card text-center" *ngIf="selectedUser">
-  <div class="card-header">
-    # {{selectedUser.email}}
-  </div>
-  <div class="card-block">
-    <h4 class="card-title">{{selectedUser.email}}</h4>
-    <p class="card-text">
-      {{selectedUser.username}}
-    </p>    
-  </div>
-
-</div>
-
-<!--<button class="btn btn-primary" *ngIf="selectedUser" (click)="deleteUser()"> Delete product</button>-->
-
-<!--<div class="container" style="margin-top: 70px;" *ngIf="isadmin|async">-->
-
-<div class="row">
-
-<div class="col-sm-8 offset-sm-2">
-
-  <div>
-    <form>
-      <div class="form-group">
-        
-
-        <label for="firstName">User first name</label>
-        <input [(ngModel)]="user.firstName" type="text" name="firstName" class="form-control" id="firstName" aria-describedby="firstNameHelp" placeholder="Enter firstName">
-        <small id="firstNameHelp" class="form-text text-muted">Enter user firstName</small>
-
-        <label for="lastName">User last name</label>
-        <input [(ngModel)]="user.lastName" type="text" name="lastName" class="form-control" id="lastName" aria-describedby="lastNameHelp"
-          placeholder="Enter last name">
-        <small id="lastNameHelp" class="form-text text-muted">Enter user last name</small>
-
-        <label for="username">User username</label>
-        <input [(ngModel)]="user.username" type="text" name="username" class="form-control" id="username" aria-describedby="usernameHelp"  placeholder="Enter username">      
-        <small id="usernameHelp" class="form-text text-muted">Enter user username</small>
-
-        <label for="email">User email</label>
-        <input [(ngModel)]="user.email" type="text" name="email" class="form-control" id="email" aria-describedby="emailHelp"  placeholder="Enter email">      
-        <small id="emailHelp" class="form-text text-muted">Enter user email</small>
-
-        <label for="userType">User type</label>
-        <input [(ngModel)]="user.userType" type="text" name="userType" class="form-control" id="userType" aria-describedby="userTypeHelp"  placeholder="Enter type">      
-        <small id="userTypeHelp" class="form-text text-muted">Enter user type</small>
-
-      </div>
-    </form>
-   <!-- <button class="btn btn-primary" (click)="createUser()">Create user</button>-->
-    <button id="editBtn" class="btn btn-primary" (click)="editUser(user)">Edit user</button>
-  </div>
-</div>
-</div>
-<!--</div>-->
