--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -49,42 +49,27 @@
 
 <!--<div class="container" style="margin-top: 70px;" *ngIf="isadmin|async">-->
 
-<div class="row">
-
-<div class="col-sm-8 offset-sm-2">
-
-  <div>
-    <form>
-      <div class="form-group">
+  <div class="container">
+    <form [formGroup]="form" (ngSubmit)="submitForm()">
         
+        <input type="file" (change)="uploadFile($event)">
 
-        <label for="feedbackCategoryName">Feedback category</label>
-        <input [(ngModel)]="feedback.feedbackCategoryName" type="text" name="feedbackCategoryName" class="form-control" id="feedbackCategoryName" aria-describedby="feedbackCategoryNameHelp" placeholder="Enter category">
-        <small id="feedbackCategoryNameHelp" class="form-text text-muted">Enter category of a feedback</small>
 
-        <label for="text">Feedbacktext</label>
-        <input [(ngModel)]="feedback.text" type="text" name="text" class="form-control" id="text" aria-describedby="textHelp"
-          placeholder="Enter text">
-        <small id="textHelp" class="form-text text-muted">Enter feedback text</small>
+       
+        <input placeholder="FeedbackCategoryName" formControlName="FeedbackCategoryName">
+        <input placeholder="text" formControlName="text">
+        <input placeholder="date" formControlName="date">
+        <input placeholder="username" formControlName="username">
 
-        <label for="date">Feedback date</label>
-        <input [(ngModel)]="feedback.date" type="text" name="date" class="form-control" id="date" aria-describedby="dateHelp"  placeholder="Enter your date">      
-        <small id="dateHelp" class="form-text text-muted">Enter feedback date</small>
 
-        <!--resolved fali ovde-->
-
-        <!--ovde ide za username a lto treba iz tokena-->
-
-        <!--slika dodavanje il prikaz sta vec-->
-
-      </div>
+        <button>Create</button>
+       
     </form>
-    <button class="btn btn-primary" (click)="createFeedback()">Create feedback</button>
-    <button id="editBtn" class="btn btn-primary" (click)="editFeedback(feedback)">Edit feedback</button>
-  </div>
 </div>
-</div>
-<!--</div>-->
+  <br>
+  
+    
+ 
 
 
 <div *ngIf="isCameraExist; else noCameraExist">
