--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,4 +1,6 @@
 <h1>List of all feedbacks</h1>
+
+
 <div class="container" style="margin-top: 70px;">
     <table class="table table-hover">
       <thead>
@@ -52,7 +54,7 @@
   <div class="container">
     <form [formGroup]="form" (ngSubmit)="submitForm()">
         
-        <input type="file" (change)="uploadFile($event)">
+        <input type="file" (change)="uploadFile($event)" accept="image/*;capture=camera">
 
 
        
@@ -60,7 +62,7 @@
         <input placeholder="text" formControlName="text">
         <input placeholder="date" formControlName="date">
         <input placeholder="username" formControlName="username">
-
+       
 
         <button>Create</button>
        
@@ -68,7 +70,10 @@
 </div>
   <br>
   
-    
+  <div class="webcam-image" *ngIf="webcamImage">
+    <img [src]="webcamImage.imageAsDataUrl" formControlName="file" />
+  </div>
+
  
 
 
@@ -79,9 +84,13 @@
           <button class="button" (click)="changeWebCame(true)">Toggle Camera</button>
           <button class="button" (click)="onOffWebCame()">Switch camera</button>
       </div> <br />
-      <webcam [height]="500" [width]="1000" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"
+      <webcam [height]="500" [width]="1000" [trigger]="triggerObservable"  (imageCapture)="handleImage($event)" 
           *ngIf="showWebcam" [switchCamera]="nextWebcamObservable"></webcam>
   </div>
+  <img href="">
+
+
+  
 
   <div *ngIf="errors.length > 0">
       <h4>Error Messages:</h4>
