feedbacks sa prikazom foto

--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -2,4 +2,7 @@
   <h1 style="text-align:center">Admin page</h1>
   <h2 style="text-align:center">Users</h2>
   <app-user></app-user>
+  <h2 style="text-align:center">Object</h2>
+  <app-object></app-object>
+
 </body>
