--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -3,7 +3,7 @@
     <table class="table table-hover">
       <thead>
         <tr>
-        
+
           <th>Category</th>
           <th>Text</th>
           <th>Date</th>
@@ -14,24 +14,23 @@
       </thead>
       <tbody>
         <tr *ngFor="let feedback of feedbacks">
-  
+
           <td> {{ feedback.feedbackCategoryName }}</td>
           <td> {{ feedback.text }}</td>
           <td> {{ feedback.date }}</td>
           <td> {{ feedback.resolved }}</td>
-          <td> {{ feedback.img }}</td>
+          <td> <img data-enlargeable src={{feedback.img}} alt="feedback photo" width="200" height="200"></td>
           <td> {{ feedback.username }}</td>
-         
+
 
           <td>
-            
+
             <button class="btn btn-primary" (click)="selectFeedback(feedback)"> Show details</button>
           </td>
         </tr>
       </tbody>
     </table>
 </div>
-
 <div class="card text-center" *ngIf="selectedFeedback">
   <div class="card-header">
     # {{selectedFeedback.img}}
@@ -40,7 +39,7 @@
     <h4 class="card-title">{{selectedFeedback.img}}</h4>
     <p class="card-text">
       {{selectedFeedback.text}}
-    </p>    
+    </p>
   </div>
 
 </div>
@@ -51,11 +50,11 @@
 
   <div class="container">
     <form [formGroup]="form" (ngSubmit)="submitForm()">
-        
+
         <input type="file" (change)="uploadFile($event)">
 
 
-       
+
         <input placeholder="FeedbackCategoryName" formControlName="FeedbackCategoryName">
         <input placeholder="text" formControlName="text">
         <input placeholder="date" formControlName="date">
@@ -63,13 +62,13 @@
 
 
         <button>Create</button>
-       
+
     </form>
 </div>
   <br>
-  
-    
- 
+
+
+
 
 
 <div *ngIf="isCameraExist; else noCameraExist">
