--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -54,7 +54,7 @@
   <div class="container">
     <form [formGroup]="form" (ngSubmit)="submitForm()">
         
-        <input type="file" (change)="uploadFile($event)" accept="image/*;capture=camera">
+        <input type="file" (change)="uploadFile($event)" accept="image/*" capture="camera">
         <input placeholder="FeedbackCategoryName" formControlName="FeedbackCategoryName">
         <input placeholder="text" formControlName="text">
         <input placeholder="date" formControlName="date">
@@ -67,36 +67,3 @@
 </div>
   <br>
   
-  <div class="webcam-image" *ngIf="webcamImage">
-    <img [src]="webcamImage.imageAsDataUrl" formControlName="file" />
-  </div>
-
- 
-
-
-<div *ngIf="isCameraExist; else noCameraExist">
-  <div style="text-align:center">
-      <div class="btn-group">
-          <button class="button" (click)="takeSnapshot()">Take Picture</button>
-          <button class="button" (click)="changeWebCame(true)">Toggle Camera</button>
-          <button class="button" (click)="onOffWebCame()">Switch camera</button>
-      </div> <br />
-      <webcam [height]="500" [width]="1000" [trigger]="triggerObservable"  (imageCapture)="handleImage($event)" 
-          *ngIf="showWebcam" [switchCamera]="nextWebcamObservable"></webcam>
-  </div>
-  <img href="">
-
-
-  
-
-  <div *ngIf="errors.length > 0">
-      <h4>Error Messages:</h4>
-      <ul *ngFor="let error of errors">
-          <li>{{ error | json }}</li>
-      </ul>
-  </div>
-</div>
-
-<ng-template #noCameraExist>
-  Camera device not available
-</ng-template>
