--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -21,7 +21,7 @@
           <td> {{ feedback.text }}</td>
           <td> {{ feedback.date }}</td>
           <td> {{ feedback.resolved }}</td>
-          <td> <img data-enlargeable src={{feedback.img}} alt="feedback photo" width="200" height="200"></td>
+          <td> <img data-enlargeable src="{{'assets/' + feedback.img}}" alt="feedback photo" width="200" height="200"></td>
           <td> {{ feedback.username }}</td>
 
 
