--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -1,3 +1,56 @@
+<div class="header">
+    <h1>Object 1.1</h1>
+    <ul>
+        <li>Retailer: Retailer 1</li>
+        <li>Assortment module: 1-SB22</li>
+        <li># of registers</li>
+        <li>Commercialist: John Doe</li>
+    </ul>
+
+    <table class="info-table">
+        <tr>
+            <th>Shelf Space M</th>
+            <th>Company Shelf Space M</th>
+            <th>Company Shelf Space %</th>
+        </tr>
+        <tr>
+            <td>20</td>
+            <td>30</td>
+            <td>25</td>
+        </tr>
+    </table>
+
+    <table class="info-table">
+        <tr>
+            <th>Gainings 12M (RSD)</th>
+            <th>WD % Serbia</th>
+            <th>WD % Sector</th>
+            <th>WD % Customer</th>
+            <th>Gainings VS 12M %</th>
+        </tr>
+        <tr>
+            <td>1.222</td>
+            <td>12</td>
+            <td>15</td>
+            <td>13</td>
+            <td>8</td>
+        </tr>
+    </table>
+</div>
+
+<div class="main">
+    <h3>ADD FEEDBACK</h3>
+    <a href="/feedback">
+        <div class="add-fb">
+            ADD FEEDBACK
+        </div>
+    </a>
+</div>
+
+
+
+
+<!--
 <h4>Podaci o objektu</h4>
 <p> {{ object.objectIdRetail }}</p><br>
 <p> {{ object.objectIdCompany }}</p><br>
@@ -26,3 +79,4 @@
 
 <button (click)="getRetailerPlanogram()">Planogram</button>
 <button (click)="createEmptyObjectStoreCheck()">Create object store check</button>
+-->
