--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -4,7 +4,7 @@
     <h1>Resolve Feedbacks</h1>
 </div>
 <div class="menu">
-    <a href="/feedback">
+    <a href="/storeCheckPage">
         <div class="item start-sc" (click)="startStoreCheck()">
             Start Store Check
         </div>
