--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,6 +1,6 @@
 
 <mat-form-field>
-  <input type="text" matInput placeholder="Search by username" [(ngModel)]= "search">
+  <input type="text" matInput placeholder="Search" [(ngModel)]= "search">
   <button matSuffix mat-button (click)="searchByUsername()"><mat-icon>search</mat-icon></button>
   </mat-form-field>
 
