--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -14,7 +14,7 @@
   <div class="parentcontainer">
 
       <div class="container">
-        <h3 style="text-align:center;color:#56baed">Import objects</h3>
+        <h3 style="text-align:center;color:#56baed">Objects</h3>
         <input type="file" #fileDropRef (change)="uploadObjectsFile($event)" id="fileDropRef" />
 
         <h3>Drag and drop file here</h3>
@@ -25,7 +25,7 @@
 
 
   <div class="container">
-    <h3 style="text-align:center;color:#56baed">Import positions</h3>
+    <h3 style="text-align:center;color:#56baed">Positions</h3>
     <input type="file" #fileDropRef (change)="uploadPositionsFile($event)" id="fileDropRef" />
 
     <h3>Drag and drop file here</h3>
