--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -6,6 +6,18 @@
     text-align: center;
 }
 
+.header .head {
+    display: flex;
+    width: 400px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.header .head i {
+    cursor: pointer;
+    margin: 0 0 0 auto;
+}
+
 .header .obj-info {
     width: 400px;
     text-align: left;
@@ -52,6 +64,10 @@
     text-decoration: none;
 }
 
+.main h4 {
+    color: grey;
+}
+
 .add-fb-btn {
     border-radius: 20px;
     border: 2px solid #39ace7;
@@ -74,10 +90,6 @@
 
 .secondary-positions {
     margin-top: 80px;
-}
-
-.secondary-positions h4 {
-    color: grey;
 }
 
 .secondary-positions td{
@@ -120,4 +132,8 @@
     background-color: #fff;
     color: #39ace7;
     transition: 0.3s;
+}
+
+.finish-sc td {
+    border: 1px solid grey;
 }
