--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <input type="text" matInput placeholder="Search" [(ngModel)]= "search">
+  <input type="text" matInput placeholder="Search" [(ngModel)]= "search" (keyup)="applyFilter($event)">
   <button matSuffix mat-button (click)="searchByString()"><mat-icon>search</mat-icon></button>
   </mat-form-field>
 
@@ -37,6 +37,9 @@
               </button>
 
      <button mat-icon-button color="primary"><mat-icon area-label="Delete" (click)="openDialog(3,row.objectName,row.objectIdCompany,row.objectIdRetail)"> delete </mat-icon>
+            </button>
+
+      <button mat-icon-button color="primary"><a [routerLink]="['/storeCheckPage', row.objectName]"><mat-icon area-label="Open">open_in_new</mat-icon></a>
             </button>
     </mat-cell>
   </ng-container>
