--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -13,8 +13,11 @@
     padding: 0 20px;
 }
 
-.header .head i {
+.header i {
     cursor: pointer;
+}
+
+.header .head i {
     margin: 0 0 0 auto;
 }
 
