--- a/src/app/components/position/position.component.html
+++ b/src/app/components/position/position.component.html
@@ -1,103 +1,36 @@
-<!--<h1>List of all positions</h1>
-<div class="container" style="margin-top: 70px;">
-    <table class="table table-hover">
-      <thead>
-        <tr>
 
-          <th>ObjectId</th>
-          <th>Class</th>
-          <th>Type</th>
+<div class="container mat-elevation-z8">
 
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let position of positions">
+<mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
-          <td> {{ position.objectId }}</td>
-          <td> {{ position.posClassName }}</td>
-          <td> {{ position.posTypeName }}</td>
+  <ng-container matColumnDef="objectName">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Object</mat-header-cell>
+    <mat-cell *matCellDef="let row">{{ row.objectName}}</mat-cell>
+  </ng-container>
+  <ng-container matColumnDef="posClassName">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Class</mat-header-cell>
+    <mat-cell *matCellDef="let row">{{ row.posClassName}}</mat-cell>
+  </ng-container>
+  <ng-container matColumnDef="posTypeName">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Type</mat-header-cell>
+    <mat-cell *matCellDef="let row">{{ row.posTypeName}}</mat-cell>
+  </ng-container>
 
+  <ng-container matColumnDef="actions">
+    <mat-header-cell *matHeaderCellDef>
+      <button mat-icon-button color="primary">
+<mat-icon>add</mat-icon>
+      </button>
+    </mat-header-cell>
+    <mat-cell *matCellDef="let row; let i=index">
+<mat-checkbox color="primary"></mat-checkbox>
 
-        </tr>
-      </tbody>
-    </table>
+    <button mat-icon-button color="primary" style="margin-left:30%"><mat-icon area-label="Delete"> delete </mat-icon>
+    </button>
+  </mat-cell>
+  </ng-container>
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"></mat-row>
+  </mat-table>
 
-    <br><br>
-    <h2>Add position</h2>
-
-<form>
-  <label for="fname">ObjectId:</label><br>
-  <input type="text" id="object" name="object" value="obj"><br>
-  <label for="lname">Position class:</label><br>
-  <input type="text" id="class" name="class" value="class">
-  <label for="lname">Position type:</label><br>
-  <input type="text" id="type" name="type" value="type">
-
-</form>
-</div>-->
-
-<form>
-  <label for="fname">Object name:</label><br>
-  <input type="text" id="objectName" name="objectName" [(ngModel)]="position.objectName"><br>
-  <label for="lname">Class name:</label><br>
-  <input type="text" id="className" name="className" [(ngModel)]="position.posClassName"><br>
-  <label for="lname">Type name:</label><br>
-  <input type="text" id="typeName" name="typeName" [(ngModel)]="position.posTypeName"><br>
-
-</form>
-
-<button (click)="createPosition()">Create position</button>
-
-
-
-<table class="table table-hover">
-    <thead>
-      <tr>
-        <th>Object</th>
-        <th>Class name</th>
-        <th>Class type</th>
-
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let position of positions">
-        <td> {{ position.objectName }}</td>
-        <td> {{ position.posClassName }}</td>
-        <td> {{ position.posTypeName }}</td>
-       <button class="btn btn-primary" (click)="selectPosition(position)"> Details</button>
-      </tr>
-    </tbody>
-  </table>
-
-  <div class="container" style="margin-top: 70px;">
-
-    <div class="row">
-
-      <div class="col-sm-8 offset-sm-2">
-
-        <div>
-          <form>
-            <div *ngIf="selectedPosition" class="form-group">
-
-              <label for="name">Object:</label>
-              <input [(ngModel)]="selectedPosition.objectName" type="text" name="object" class="form-control" id="object" placeholder="Enter position object">
-
-
-              <label for="type">Class:</label>
-              <input [(ngModel)]="selectedPosition.posClassName" type="text" name="class" class="form-control" id="class"
-                placeholder="Enter position class">
-
-
-              <label for="date">Type:</label>
-              <input [(ngModel)]="selectedPosition.posTypeName" name="type" class="form-control" id="type" placeholder="Enter position type">
-
-
-
-            </div>
-          </form>
-
-          <button class="btn btn-primary" *ngIf="selectedPosition" (click)="deletePosition()"> Delete position</button>
-        </div>
-      </div>
-    </div>
-  </div>
+</div>
