--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -49,7 +49,7 @@
 <app-feedback></app-feedback>
 <app-position></app-position>
 
-<div class="main" *ngIf="1>2">
+<!--<div class="main">
     <h3>ADD FEEDBACK</h3>
     <a href="/feedback">
         <div class="add-fb-btn">
@@ -71,7 +71,7 @@
 
     <button class="btn-finish">FINISH</button>
 </div>
-
+-->
 
 
 
