prikaz resenih fb

--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -21,7 +21,7 @@
         <app-object></app-object>
     </div>
 
-    <div class="finish-sc">
+    <div class="finish-sc" *ngIf="resolveFeedbacks == false">
         <h4>SEND STORE CHECK TO:</h4>
         <table class="emails-tbl">
             <tr>
