--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -37,7 +37,7 @@
 
 
 
-  <ng-container matColumnDef="actions">
+  <ng-container matColumnDef="actions" *ngIf="!resolveFeedbacks">
     <mat-header-cell *matHeaderCellDef>
       <button mat-icon-button color="primary">
 <mat-icon>add</mat-icon>
@@ -51,6 +51,9 @@
   <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns" (click)="openDialog(3,row.feedbackCategoryName,row.text,row.date,row.resolved,row.img,row.username)"></mat-row>
   </mat-table>
 
+  <!--<button mat-button (click)="showResolvedFeedbacks()" *ngIf="!showResolved">Show Resolved</button>
+  <button mat-button (click)="showResolvedFeedbacks()" *ngIf="showResolved">Show Unresolved</button>-->
+  <button mat-button [routerLink]="['/resolvedFeebacks/', objectName]">Show Resolved</button>
 </div>
 
 
