--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -39,7 +39,7 @@
      <button mat-icon-button color="primary"><mat-icon area-label="Delete" (click)="openDialog(3,row.objectName,row.objectIdCompany,row.objectIdRetail)"> delete </mat-icon>
             </button>
 
-      <button mat-icon-button color="primary"><a [routerLink]="['/storeCheckPage', row.objectName]"><mat-icon area-label="Open">open_in_new</mat-icon></a>
+      <button mat-icon-button color="primary"><mat-icon area-label="Open" [routerLink]="['/storeCheckPage', row.objectName]">open_in_new</mat-icon>
             </button>
     </mat-cell>
   </ng-container>
