--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -6,6 +6,9 @@
   <h2 style="text-align:center;color:#56baed">Objects</h2>
   <app-object></app-object>
   <br>
+  <h2 style="text-align:center;color:#56baed">Retailers</h2>
+  <app-retailer></app-retailer>
+  <br>
   <h2 style="text-align:center;color:#56baed">Import Excel</h2>
   <br>
 
@@ -46,6 +49,11 @@
     <label for="fileDropRef" style="background-color:#56baed">Browse for file</label>
   </div>
 </div>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 </body>
