--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -46,8 +46,8 @@
     <i class="fa-solid fa-circle-chevron-up fa-1x" (click)="showObjectInfos()" *ngIf="showDetails == true"></i>
 </div>
 
-<app-feedback [objectName]="objectName"></app-feedback>
-<app-position></app-position>
+<app-feedback [objectName]="objectName" [resolveFeedbacks]="false"></app-feedback>
+<app-position [objectName]="objectName"></app-position>
 
 <!--<div class="main">
     <h3>ADD FEEDBACK</h3>
