--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
@@ -1,3 +1,18 @@
 .table-row {
   height: 30px !important;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  min-width: 450px;
+  }
+  
+.form {
+  display: flex;
+}
+  
+.mat-form-field {
+  font-size: 16px;
+  flex-grow: 1;
+}
