--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <input type="text" matInput placeholder="Search" [(ngModel)]= "search" (keyup)="applyFilter($event)">
+  <input type="text" matInput placeholder="Search" [(ngModel)]= "search">
   <button matSuffix mat-button (click)="searchByString()"><mat-icon>search</mat-icon></button>
   </mat-form-field>
 
